upgrade to java 11 and eclipse 2018-08
git-svn-id: https://subversion.assembla.com/svn/smart-cs/branches/java11@7203 37136b1e-4cb1-4992-8394-573b48a9bdce