@@ -190,7 +190,7 @@ public class CybertrackerItemProcessor implements IItemProcessor, IRunnableWithP
 		}
 		List<IJsonProcessor> copy = new ArrayList<IJsonProcessor>(jsonProcessors.size());
 		for (IJsonProcessor p : jsonProcessors){
-			copy.add(p.getClass().newInstance());
+			copy.add(p.getClass().getConstructor().newInstance());
 		}
 		return copy;
 	}
